--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.24",
-    "tailwindcss": "^3.3.2",
-    "vite": "^4.4.9"
-  }
+  "autoprefixer": "^10.4.14",
+  "postcss": "^8.4.24",
+  "tailwindcss": "^3.3.2",
+  "vite": "^4.4.9",
+  "@vitejs/plugin-react": "^3.1.0"  // <-- Add this line
+}
 }
